# tflite-rock_paper_scissors

./: .gitignore  README.md  Train_using_new_images.ipynb  converted_model.tflite  pyproject.toml  setup_rpi_for_tflite.sh  tflite_rock_paper_scissors.ipynb
rps_saved_model/: saved_model.pb
rps_saved_model/variables/: variables.index
