[tool.poetry]
name = "tflite-rock_paper_scissors"
version = "0.1.0"
description = ""
authors = ["Jidhu Mohan <jidhu.mohan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
matplotlib = "^3.2.2"
scikit-learn = "^1.0.2"
tensorflow = "2.6.0"
tensorflow-hub = "0.12.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
